He agregado el logo en todas las páginas y he hecho ya la página "visitanos"

--- a/proyecto html/contacto.html
+++ b/proyecto html/contacto.html
@@ -6,6 +6,9 @@
     <title>Contacto</title>
 </head>
 <body>
+  <header>
+    <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+</header>
     <div class="formulario-contacto">
         <h2>Contacta con nosotros</o-></h2>
         <form action="http://www.cursos-diseño.es/mostrar.php" method="post">
