--- a/proyecto html/moda.html
+++ b/proyecto html/moda.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h1>Moda</h1>
 
     <h2>ZARA</h2>
