--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -6,6 +6,9 @@
     <title>Ocio</title>
 </head>
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     
 </body>
 </html>
