--- a/proyecto html/restaurantes.html
+++ b/proyecto html/restaurantes.html
@@ -6,6 +6,9 @@
     <title>Restaurantes</title>
 </head>
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h2>BURGUER KING</h2>
     <a href="https://www.plazanorte2.com/restaurante/burger-king?location=B038" target="_blank"><img src="Imagenes/burguer_king.png" alt=""></a>
     <p>Burger King, también conocida como BK, es una cadena de restaurantes de comida rápida estadounidense especializada en la elaboración de hamburguesas.</p>
