--- a/proyecto html/tiendas.html
+++ b/proyecto html/tiendas.html
@@ -6,6 +6,9 @@
     <title>Tiendas</title>
 </head>
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h1>TIENDAS</h1>
  
      <nav class="categoriasTienda">
