--- a/proyecto html/BellezaSalud.html
+++ b/proyecto html/BellezaSalud.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h1>BELLEZA Y SALUD</h1>
 
     <h2>KIKO</h2>
