--- a/proyecto html/aviso_legal.html
+++ b/proyecto html/aviso_legal.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h1>Aviso legal</h1>
     <p>Las presentes Condiciones Generales de Uso regulan el uso del sitio web www.plazanorte2.com (en adelante, el
         “Sitio Web”), titularidad de LA SOCIEDAD GENERAL INMOBILIARIA DE ESPAÑA, S.A. (en adelante, “Centro Comercial
