--- a/proyecto html/deporte.html
+++ b/proyecto html/deporte.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h1>Deportes</h1>
 
     <h2>ADIDAS</h2>
