--- a/proyecto html/joyeria.html
+++ b/proyecto html/joyeria.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h1>Joyería</h1>
 
     <h2>PANDORA</h2>
