--- a/proyecto html/tecnologia.html
+++ b/proyecto html/tecnologia.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+    </header>
     <h1>Tecnología</h1>
 
     <h2>FNAC</h2>
