Añado una parte de Ocio, está sin acabar

--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ocio</title>
 </head>
+
 <body>
+
     <header>
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
-    
+
+    <h2>Cines</h2>
+    <a href="OcioCine.html"><img src="Imagenes/cine.jpg" alt=""></a>
+
+    <h2>Laser city</h2>
+    <a href="OcioLaser.html"><img src="Imagenes/LaserCity.png" alt=""></a>
+
+    <h2>Restaurantes</h2>
+    <a href="OcioRestaurantes.html"><img src="Imagenes/restaurantes" alt=""></a>
+
+
+
+
 </body>
+
 </html>
