He añadido las imagenes para el carrusel

--- a/proyecto html/index.html
+++ b/proyecto html/index.html
@@ -27,6 +27,9 @@
     <h1>Bienvenido a Plaza Norte 2 <br>
         La mayor oferta comercial y de ocio del norte de Madrid</h1>
     <img src="Imagenes/plaza_norte.webp" alt="">
+    <img src="Imagenes/plaza_norte2.jpg" alt="">
+    <img src="Imagenes/plaza_norte3.jpg" alt="">
+    <img src="Imagenes/plaza_norte4.webp" alt="">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YxEL-_egy8k?si=d5o1VUhhhAqDTUTO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
