He creado un JSON metiendo las tiendas y el cine

--- a/proyecto html/restaurantes.html
+++ b/proyecto html/restaurantes.html
@@ -41,7 +41,7 @@
     <a href="https://www.llaollaoweb.com/es/" target="_blank"><img src="Imagenes/llaollao.png" alt=""></a>    
     <p>Disfruta del yogur helado llaollao y vive la experiencia más natural con los toppings más deliciosos, todas las salsas que puedas imaginar, la fruta más fresca y, por supuesto, el frozen yogurt más nutritivo y refrescante.</p>
     
-    <h2>MCDONAL'S</h2>
+    <h2>McDonald'S</h2>
     <a href="https://mcdonalds.es/" target="_blank"><img src="Imagenes/macas.jpg" alt=""></a>    
     <p>McDonald's es una franquicia de restaurantes de comida rápida estadounidense. Sus principales productos son las hamburguesas, las patatas fritas, los menús para el desayuno y los refrescos. También se encuentra una oferta disponible de batidos, helados, postres y ensaladas de fruta o de verdura</p>
     
