he anadido article a todas las paginas

--- a/proyecto html/BellezaSalud.html
+++ b/proyecto html/BellezaSalud.html
@@ -11,33 +11,50 @@
     <header>
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
-    <h1>BELLEZA Y SALUD</h1>
 
-    <h2>KIKO</h2>
-    <a href="https://www.kikocosmetics.com/es-es/?utm_medium=cpc&utm_source=google&utm_campaign=[ES_BRAND]_KIKO_Top_Keywords&gad_source=1&gbraid=0AAAAADxlaREsqibremb7tW3fVsr7SvhSs&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUEdXcQsxsUPKHe278hzrxs8ZwFZYPdFmm1VM7zWWHH-cf_94U0iY6gaAoeeEALw_wcB"><img src="Imagenes/kiko.jpg" alt=""></a>
-    <p> <b>KIKO Milano</b> es una marca italiana de cosméticos conocida por ofrecer maquillaje innovador, colorido y de alta calidad a precios accesibles. Ideal para quienes disfrutan experimentar con su look y seguir las últimas tendencias en belleza.</p>
+    <article>
+        <h1>BELLEZA Y SALUD</h1>
 
-    <h2>SEPHORA</h2>
-    <a href="https://www.sephora.es/?utm_source=google&utm_medium=cpc&utm_campaign=SephoraEUR_SR_ESP_&gad_source=1&gbraid=0AAAAACU6TezMTyDg_VIHBB5_S41yUnjHA&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUG_4bsNga7lAqah81eFMf0-XeJygCCFFtcDaZXPxvyiJzYXe6f_2hMaAgnqEALw_wcB#BRA-BrandSephora_UNI_OTH_OGOING_EC_BREX_GTAD_CRD_SPA_EUR_BRA-Exact&utm_term=sephora"><img src="Imagenes/sephora.jpg" alt=""></a>
-    <p> <b>Sephora</b> es una tienda líder en belleza que ofrece una amplia variedad de productos de maquillaje, cuidado de la piel, fragancias y más. Con marcas exclusivas y asesoría personalizada, es el lugar ideal para quienes buscan lo último en tendencias de belleza.
+        <h2>KIKO</h2>
+        <a
+            href="https://www.kikocosmetics.com/es-es/?utm_medium=cpc&utm_source=google&utm_campaign=[ES_BRAND]_KIKO_Top_Keywords&gad_source=1&gbraid=0AAAAADxlaREsqibremb7tW3fVsr7SvhSs&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUEdXcQsxsUPKHe278hzrxs8ZwFZYPdFmm1VM7zWWHH-cf_94U0iY6gaAoeeEALw_wcB"><img
+                src="Imagenes/kiko.jpg" alt=""></a>
+        <p> <b>KIKO Milano</b> es una marca italiana de cosméticos conocida por ofrecer maquillaje innovador, colorido y
+            de alta calidad a precios accesibles. Ideal para quienes disfrutan experimentar con su look y seguir las
+            últimas tendencias en belleza.</p>
 
-    </p>
+        <h2>SEPHORA</h2>
+        <a
+            href="https://www.sephora.es/?utm_source=google&utm_medium=cpc&utm_campaign=SephoraEUR_SR_ESP_&gad_source=1&gbraid=0AAAAACU6TezMTyDg_VIHBB5_S41yUnjHA&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUG_4bsNga7lAqah81eFMf0-XeJygCCFFtcDaZXPxvyiJzYXe6f_2hMaAgnqEALw_wcB#BRA-BrandSephora_UNI_OTH_OGOING_EC_BREX_GTAD_CRD_SPA_EUR_BRA-Exact&utm_term=sephora"><img
+                src="Imagenes/sephora.jpg" alt=""></a>
+        <p> <b>Sephora</b> es una tienda líder en belleza que ofrece una amplia variedad de productos de maquillaje,
+            cuidado de la piel, fragancias y más. Con marcas exclusivas y asesoría personalizada, es el lugar ideal para
+            quienes buscan lo último en tendencias de belleza.
 
-    <h2>PRIMOR</h2>
-    <a href="https://www.primor.eu/es_es/?utm_source=google&utm_medium=cpc&utm_campaign=es-i-s-mp&utm_term=primor&utm_content=es-interna-search-mp&utm_id=1838580392&gad_source=1&gbraid=0AAAAACzh5V8Lr9AMUpPI45ZGPR9rdJkgM&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUFSNbVAlAbzeILcbZwqF0AlVcr74YTnXcCsGMy_5b1KEdyWZxM79U4aAvWjEALw_wcB"><img src="Imagenes/primor" alt=""></a>
-    <p> <b> Primor</b>  es una perfumería y tienda de cosmética que destaca por sus precios competitivos y su amplio catálogo de productos. Ofrece desde perfumes y maquillaje hasta cuidado personal, con marcas reconocidas y opciones para todos los gustos.
+        </p>
 
-    </p>
+        <h2>PRIMOR</h2>
+        <a
+            href="https://www.primor.eu/es_es/?utm_source=google&utm_medium=cpc&utm_campaign=es-i-s-mp&utm_term=primor&utm_content=es-interna-search-mp&utm_id=1838580392&gad_source=1&gbraid=0AAAAACzh5V8Lr9AMUpPI45ZGPR9rdJkgM&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUFSNbVAlAbzeILcbZwqF0AlVcr74YTnXcCsGMy_5b1KEdyWZxM79U4aAvWjEALw_wcB"><img
+                src="Imagenes/primor" alt=""></a>
+        <p> <b> Primor</b> es una perfumería y tienda de cosmética que destaca por sus precios competitivos y su amplio
+            catálogo de productos. Ofrece desde perfumes y maquillaje hasta cuidado personal, con marcas reconocidas y
+            opciones para todos los gustos.
 
-    <h2>DRUNI</h2>
-    <a href="https://www.druni.es/?srsltid=AfmBOoqs0DS6NITkSurTx0ITDwtkqbSd1eynyiZa2-Xt1tqBHbx7B4g0"><img src="Imagenes/druni.JPG" alt=""></a>
-    <p> <b>Druni</b>  es una cadena de perfumerías especializada en cosmética, maquillaje, perfumes y cuidado personal. Ofrece una gran variedad de marcas y promociones, convirtiéndola en una opción popular para los amantes de la belleza y el bienestar.
+        </p>
 
-    </p>
+        <h2>DRUNI</h2>
+        <a href="https://www.druni.es/?srsltid=AfmBOoqs0DS6NITkSurTx0ITDwtkqbSd1eynyiZa2-Xt1tqBHbx7B4g0"><img
+                src="Imagenes/druni.JPG" alt=""></a>
+        <p> <b>Druni</b> es una cadena de perfumerías especializada en cosmética, maquillaje, perfumes y cuidado
+            personal. Ofrece una gran variedad de marcas y promociones, convirtiéndola en una opción popular para los
+            amantes de la belleza y el bienestar.
+
+        </p>
 
 
 
-
+    </article>
 
 
 </body>
