--- a/proyecto html/index.html
+++ b/proyecto html/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
 </head>
+
 <body>
 
     <header>
         PLAZA NORTE 2
     </header>
-    
-    <nav>
-        <ul>
-            <li><a href="index.html" class="active">Inicio</a></li>
-            <li><a href="tiendas.html">Tiendas</a></li>
-            <li><a href="restaurantes.html">Restaurantes</a></li>
-            <li><a href="ocio.html">Ocio</a></li>
-            <li><a href="cine.html">Cine</a></li>
-            <li><a href="visitanos.html">Visítanos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="aviso_legal.html">Aviso legal</a></li>
+    <article>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Inicio</a></li>
+                <li><a href="tiendas.html">Tiendas</a></li>
+                <li><a href="restaurantes.html">Restaurantes</a></li>
+                <li><a href="ocio.html">Ocio</a></li>
+                <li><a href="cine.html">Cine</a></li>
+                <li><a href="visitanos.html">Visítanos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="aviso_legal.html">Aviso legal</a></li>
 
-        </ul>
-    </nav>
-    <h1>Bienvenido a Plaza Norte 2 <br>
-        La mayor oferta comercial y de ocio del norte de Madrid</h1>
-    <img src="Imagenes/plaza_norte.webp" alt="">
-    <img src="Imagenes/plaza_norte2.jpg" alt="">
-    <img src="Imagenes/plaza_norte3.jpg" alt="">
-    <img src="Imagenes/plaza_norte4.webp" alt="">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YxEL-_egy8k?si=d5o1VUhhhAqDTUTO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </ul>
+        </nav>
+        <h1>Bienvenido a Plaza Norte 2 <br>
+            La mayor oferta comercial y de ocio del norte de Madrid</h1>
+        <img src="Imagenes/plaza_norte.webp" alt="">
+        <img src="Imagenes/plaza_norte2.jpg" alt="">
+        <img src="Imagenes/plaza_norte3.jpg" alt="">
+        <img src="Imagenes/plaza_norte4.webp" alt="">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YxEL-_egy8k?si=d5o1VUhhhAqDTUTO"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    </article>
 </body>
+
 </html>
