--- a/proyecto html/deporte.html
+++ b/proyecto html/deporte.html
@@ -11,40 +11,51 @@
     <header>
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
-    <h1>Deportes</h1>
 
-    <h2>ADIDAS</h2>
-    <a href="https://www.adidas.es/"><img src="Imagenes/adidas" alt=""></a>
-    <p> <b>Adidas</b> es una marca líder en ropa deportiva y calzado, conocida por su innovación, confort y estilo. Ofrece
-        productos para atletas y aficionados al deporte, con diseños que combinan funcionalidad y moda, tanto para
-        entrenamientos como para el día a día.</p>
+    <article>
+        <h1>Deportes</h1>
 
-
-    <h2>JD</h2>
-    <a href="https://www.jdsports.es/"><img src="Imagenes/jd" alt=""></a>
-    <p> <b>JD Sports</b> es una tienda especializada en ropa deportiva, calzado y accesorios de las mejores marcas. Con un
-        enfoque en el estilo urbano y deportivo, ofrece productos de alta calidad para quienes buscan comodidad y un
-        look moderno.
-
-    </p>
+        <h2>ADIDAS</h2>
+        <a href="https://www.adidas.es/"><img src="Imagenes/adidas" alt=""></a>
+        <p> <b>Adidas</b> es una marca líder en ropa deportiva y calzado, conocida por su innovación, confort y estilo.
+            Ofrece
+            productos para atletas y aficionados al deporte, con diseños que combinan funcionalidad y moda, tanto para
+            entrenamientos como para el día a día.</p>
 
 
-    <h2>SNIPES</h2>
-    <a href="https://www.snipes.com/es-es/?utm_medium=cpc&utm_campaign=google_sea_text_trademark_snipes_es_trademark&utm_source=google&gad_source=1&gbraid=0AAAAADy4gR2v-toeyjOOk6JBm7kiNnDqF&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHudBgxz5rnPumiW_ZZtMIEFsonhPhtjmlbzEBiplmjXRG92KktgtsaAvZJEALw_wcB"><img src="Imagenes/snipes" alt=""></a>
-    <p> <b>Snipes</b> es una tienda especializada en sneakers, ropa deportiva y streetwear. Con una amplia gama de marcas
-        populares, ofrece productos con un estilo urbano y deportivo, perfectos para quienes buscan combinar comodidad y
-        tendencias actuales.
+        <h2>JD</h2>
+        <a href="https://www.jdsports.es/"><img src="Imagenes/jd" alt=""></a>
+        <p> <b>JD Sports</b> es una tienda especializada en ropa deportiva, calzado y accesorios de las mejores marcas.
+            Con un
+            enfoque en el estilo urbano y deportivo, ofrece productos de alta calidad para quienes buscan comodidad y un
+            look moderno.
 
-    </p>
+        </p>
 
 
-    <h2>FOOT LOCKER</h2>
-    <a href="https://www.footlocker.es/"><img src="Imagenes/footLocker" alt=""></a>
-    <p> <b>Foot Locker</b> es una tienda líder en calzado deportivo y ropa urbana, conocida por su amplia selección de sneakers
-        y productos de marcas icónicas. Ideal para los amantes de la moda deportiva, ofrece las últimas tendencias en
-        calzado y ropa casual.
+        <h2>SNIPES</h2>
+        <a
+            href="https://www.snipes.com/es-es/?utm_medium=cpc&utm_campaign=google_sea_text_trademark_snipes_es_trademark&utm_source=google&gad_source=1&gbraid=0AAAAADy4gR2v-toeyjOOk6JBm7kiNnDqF&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHudBgxz5rnPumiW_ZZtMIEFsonhPhtjmlbzEBiplmjXRG92KktgtsaAvZJEALw_wcB"><img
+                src="Imagenes/snipes" alt=""></a>
+        <p> <b>Snipes</b> es una tienda especializada en sneakers, ropa deportiva y streetwear. Con una amplia gama de
+            marcas
+            populares, ofrece productos con un estilo urbano y deportivo, perfectos para quienes buscan combinar
+            comodidad y
+            tendencias actuales.
 
-    </p>
+        </p>
+
+
+        <h2>FOOT LOCKER</h2>
+        <a href="https://www.footlocker.es/"><img src="Imagenes/footLocker" alt=""></a>
+        <p> <b>Foot Locker</b> es una tienda líder en calzado deportivo y ropa urbana, conocida por su amplia selección
+            de sneakers
+            y productos de marcas icónicas. Ideal para los amantes de la moda deportiva, ofrece las últimas tendencias
+            en
+            calzado y ropa casual.
+
+        </p>
+    </article>
 
 
 
