--- a/proyecto html/joyeria.html
+++ b/proyecto html/joyeria.html
@@ -11,33 +11,41 @@
     <header>
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
-    <h1>Joyería</h1>
+    <article>
+        <h1>Joyería</h1>
 
-    <h2>PANDORA</h2>
-    <a href="https://es.pandora.net/"><img src="Imagenes/pandora.jpg" alt=""></a>
-    <p> <b>Pandora</b> es una marca mundialmente reconocida por sus joyas elegantes y personalizables. Ofrece pulseras, anillos,
-        collares y pendientes que permiten a cada persona expresar su estilo único a través de piezas sofisticadas y de
-        alta calidad.
+        <h2>PANDORA</h2>
+        <a href="https://es.pandora.net/"><img src="Imagenes/pandora.jpg" alt=""></a>
+        <p> <b>Pandora</b> es una marca mundialmente reconocida por sus joyas elegantes y personalizables. Ofrece
+            pulseras, anillos,
+            collares y pendientes que permiten a cada persona expresar su estilo único a través de piezas sofisticadas y
+            de
+            alta calidad.
 
-    </p>
-
-
-    <h2>BIJOU BRIGITTE</h2>
-    <a href="https://www.bijou-brigitte.com/es"><img src="Imagenes/BIJOUBRIGITTE.jpg" alt=""></a>
-    <p> <b>Bijou Brigitte</b> es una tienda de accesorios y joyería que ofrece una amplia gama de productos, desde piezas
-        elegantes y sofisticadas hasta opciones más casuales y modernas. Ideal para quienes buscan añadir un toque
-        especial a su estilo con joyas de calidad a precios accesibles.
-
-    </p>
+        </p>
 
 
-    <h2>TIME ROAD</h2>
-    <a href="https://timeroadshop.com/en-GB"><img src="Imagenes/timeRoad" alt=""></a>
-    <p> <b>Time Road</b> es una tienda especializada en relojería, ofreciendo una amplia variedad de relojes de marcas
-        reconocidas y de alta calidad. Con opciones para todos los gustos y estilos, es el lugar ideal para encontrar el
-        reloj perfecto, ya sea clásico, deportivo o moderno.
+        <h2>BIJOU BRIGITTE</h2>
+        <a href="https://www.bijou-brigitte.com/es"><img src="Imagenes/BIJOUBRIGITTE.jpg" alt=""></a>
+        <p> <b>Bijou Brigitte</b> es una tienda de accesorios y joyería que ofrece una amplia gama de productos, desde
+            piezas
+            elegantes y sofisticadas hasta opciones más casuales y modernas. Ideal para quienes buscan añadir un toque
+            especial a su estilo con joyas de calidad a precios accesibles.
 
-    </p>
+        </p>
+
+
+        <h2>TIME ROAD</h2>
+        <a href="https://timeroadshop.com/en-GB"><img src="Imagenes/timeRoad" alt=""></a>
+        <p> <b>Time Road</b> es una tienda especializada en relojería, ofreciendo una amplia variedad de relojes de
+            marcas
+            reconocidas y de alta calidad. Con opciones para todos los gustos y estilos, es el lugar ideal para
+            encontrar el
+            reloj perfecto, ya sea clásico, deportivo o moderno.
+
+        </p>
+
+    </article>
 
 
 
