--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -13,14 +13,18 @@
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
 
-    <h2>Cines</h2>
-    <a href="OcioCine.html"><img src="Imagenes/cine.jpg" alt=""></a>
+    <article>
 
-    <h2>Laser city</h2>
-    <a href="OcioLaser.html"><img src="Imagenes/LaserCity.png" alt=""></a>
+        <h2>Cines</h2>
+        <a href="OcioCine.html"><img src="Imagenes/cine.jpg" alt=""></a>
 
-    <h2>Restaurantes</h2>
-    <a href="OcioRestaurantes.html"><img src="Imagenes/restaurantes" alt=""></a>
+        <h2>Laser city</h2>
+        <a href="OcioLaser.html"><img src="Imagenes/LaserCity.png" alt=""></a>
+
+        <h2>Restaurantes</h2>
+        <a href="OcioRestaurantes.html"><img src="Imagenes/restaurantes" alt=""></a>
+
+    </article>
 
 
 
