--- a/proyecto html/tecnologia.html
+++ b/proyecto html/tecnologia.html
@@ -11,33 +11,45 @@
     <header>
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
-    <h1>Tecnología</h1>
 
-    <h2>FNAC</h2>
-    <a href="https://www.fnac.es/?origin=SEA_GOOG_SEA_BRAND&gad_source=1&gbraid=0AAAAAD8T49WYw8gxSzObFklNeWfKvLiQi&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHIGA9N6-1jR5hlPii0xIpi1kg6wV_Z429t5uf92hBfUUE4uo1rCkkaAg-LEALw_wcB&gclsrc=aw.ds"><img src="Imagenes/fnac" alt=""></a>
-    <p> <b>FNAC</b> es una tienda especializada en tecnología, electrónica, cultura y entretenimiento. Ofrece una gran variedad
-        de productos, como libros, música, cine, gadgets y artículos electrónicos, siendo el destino perfecto para los
-        amantes de la tecnología y la cultura.
+    <article>
+        <h1>Tecnología</h1>
 
-    </p>
+        <h2>FNAC</h2>
+        <a
+            href="https://www.fnac.es/?origin=SEA_GOOG_SEA_BRAND&gad_source=1&gbraid=0AAAAAD8T49WYw8gxSzObFklNeWfKvLiQi&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHIGA9N6-1jR5hlPii0xIpi1kg6wV_Z429t5uf92hBfUUE4uo1rCkkaAg-LEALw_wcB&gclsrc=aw.ds"><img
+                src="Imagenes/fnac" alt=""></a>
+        <p> <b>FNAC</b> es una tienda especializada en tecnología, electrónica, cultura y entretenimiento. Ofrece una
+            gran variedad
+            de productos, como libros, música, cine, gadgets y artículos electrónicos, siendo el destino perfecto para
+            los
+            amantes de la tecnología y la cultura.
 
-
-    <h2>GAME </h2>
-    <a href="https://www.game.es/"><img src="Imagenes/Game" alt=""></a>
-    <p> <b>Game</b> es una tienda especializada en videojuegos, consolas y accesorios para los gamers. Ofrece una amplia
-        variedad de títulos para todas las plataformas, así como productos exclusivos para los entusiastas del mundo del
-        gaming y la tecnología.
-
-    </p>
+        </p>
 
 
-    <h2>VODAFONE</h2>
-    <a href="https://oferta.vodafone.es/fibra-movil/?cid=1725849099:dt-20190301:cp-vdf_tol_continuidad:cn-sem:kw-13038396:cc-:cl-no_cliente:sp-Google:cr-:gk-marca:st-prospecting:ta-base:md-marca:ds-responsive:pr-blended:wn-tol:pl-/VDF-TOL-BrandPura-Def-BASEPC&gad_source=1&gbraid=0AAAAADrWASMNz9QqTqa6NuNxl530gUJSX&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUEcckLYPy5VR2D-4FF1kvAIZPSWdG1j6XIWKPwdq_87RVOMKiL-wPkaAtsmEALw_wcB"><img src="Imagenes/vodafone" alt=""></a>
-    <p>ç <b>Vodafone</b> es una de las principales compañías de telecomunicaciones, ofreciendo servicios de telefonía móvil,
-        internet y televisión. Con planes y ofertas adaptadas a diferentes necesidades, Vodafone destaca por su
-        cobertura de calidad y soluciones tecnológicas innovadoras.
+        <h2>GAME </h2>
+        <a href="https://www.game.es/"><img src="Imagenes/Game" alt=""></a>
+        <p> <b>Game</b> es una tienda especializada en videojuegos, consolas y accesorios para los gamers. Ofrece una
+            amplia
+            variedad de títulos para todas las plataformas, así como productos exclusivos para los entusiastas del mundo
+            del
+            gaming y la tecnología.
 
-    </p>
+        </p>
+
+
+        <h2>VODAFONE</h2>
+        <a
+            href="https://oferta.vodafone.es/fibra-movil/?cid=1725849099:dt-20190301:cp-vdf_tol_continuidad:cn-sem:kw-13038396:cc-:cl-no_cliente:sp-Google:cr-:gk-marca:st-prospecting:ta-base:md-marca:ds-responsive:pr-blended:wn-tol:pl-/VDF-TOL-BrandPura-Def-BASEPC&gad_source=1&gbraid=0AAAAADrWASMNz9QqTqa6NuNxl530gUJSX&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUEcckLYPy5VR2D-4FF1kvAIZPSWdG1j6XIWKPwdq_87RVOMKiL-wPkaAtsmEALw_wcB"><img
+                src="Imagenes/vodafone" alt=""></a>
+        <p>ç <b>Vodafone</b> es una de las principales compañías de telecomunicaciones, ofreciendo servicios de
+            telefonía móvil,
+            internet y televisión. Con planes y ofertas adaptadas a diferentes necesidades, Vodafone destaca por su
+            cobertura de calidad y soluciones tecnológicas innovadoras.
+
+        </p>
+    </article>
 
 
 
