--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visítanos</title>
 </head>
+
 <body>
     <header>
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
-    <h2>¿Dónde estamos?</h2>
-        <p>Nos encontramos en San Sebastián de los Reyes, Madrid. Plaza Norte 2 es uno de los centros comerciales más grandes y bonitos de Europa.</p>
+
+    <article>
+        <h2>¿Dónde estamos?</h2>
+        <p>Nos encontramos en San Sebastián de los Reyes, Madrid. Plaza Norte 2 es uno de los centros comerciales más
+            grandes y bonitos de Europa.</p>
 
         <h2>¿Cómo llegar?</h2>
-        <p>Puedes venir en coche, autobús o tren. Disponemos de un amplio aparcamiento gratuito para todos los visitantes.</p>
+        <p>Puedes venir en coche, autobús o tren. Disponemos de un amplio aparcamiento gratuito para todos los
+            visitantes.</p>
 
         <h2>Horario</h2>
         <p>Tiendas: Lunes a Sábado de 10:00 a 22:00.</p>
         <p>Restauración y ocio: Todos los días de 12:00 a 01:00.</p>
 
         <h2>Mapa</h2>
-        <p>Consulta nuestra ubicación en <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3032.0335748562684!2d-3.6160852246267505!3d40.54084737141985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422cde0b7c5567%3A0xabbb242cbe4258e0!2sCentro%20Comercial%20Plaza%20Norte%202!5e0!3m2!1ses!2ses!4v1745829536689!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>Consulta nuestra ubicación en <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3032.0335748562684!2d-3.6160852246267505!3d40.54084737141985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422cde0b7c5567%3A0xabbb242cbe4258e0!2sCentro%20Comercial%20Plaza%20Norte%202!5e0!3m2!1ses!2ses!4v1745829536689!5m2!1ses!2ses"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </article>
 </body>
+
 </html>
