--- a/proyecto html/contacto.html
+++ b/proyecto html/contacto.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
   <title>Contacto</title>
 </head>
 
@@ -11,34 +13,53 @@
   <header>
     <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
   </header>
-  <article>
-    <div class="formulario-contacto">
-      <h2>Contacta con nosotros</o-></h2>
-      <form action="http://www.cursos-diseño.es/mostrar.php" method="post">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
 
-        <label for="apellidos">Apellidos:</label>
-        <input type="text" id="apellidos" name="apellidos" required>
+  <article class="container">
+    <form action="http://www.cursos-diseño.es/mostrar.php" method="post">
+      <div class="mb-3">
+        Nombre
+        <input type="text" name="nombre" class="form-control" required />
+      </div>
+      <div class="mb-3">
+        Apellidos
+        <input type="text" name="apellidos" class="form-control" required/>
+      </div>
 
-        <label for="direccion">Dirección:</label>
-        <input type="text" id="direccion" name="direccion" required>
+      <div class="mb-3">
+        Correo electrónico
+        <input type="text" name="Correo" class="form-control" required />
+      </div>
 
-        <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email" required>
+      <div class="mb-3">
+        Telefono
+        <input type="number" name="Telefono" class="form-control" required />
+      </div>
 
-        <label for="confirmar_email">Confirmar correo electrónico:</label>
-        <input type="email" id="confirmar_email" name="confirmar_email" required>
 
-        <label for="telefono">Teléfono:</label>
-        <input type="tel" id="telefono" name="telefono" required pattern="[0-9]{9,15}">
+      <div class="mb-3">
+        Asunto
+        <textarea name="Asunto"  type="text"  class="form-control" required></textarea>
+      </div>
 
-        <label for="comentarios">Comentarios:</label>
-        <textarea id="comentarios" name="comentarios" rows="5" required></textarea>
 
-        <button type="submit">Enviar</button>
-      </form>
-    </div>
+      <div class="mb-3">
+        <label class="form-check">
+          <input type="checkbox" name="acepto" value="si" class="form-check-input" required/>
+          Acepto los términos y condiciones
+        </label>
+      </div>
+      <div class="mb-3">
+        <label class="form-check form-switch">
+          <input type="checkbox" name="boletin" value="si" class="form-check-input" />
+          Quiero recibir boletín de noticias por email
+        </label>
+      </div>
+
+
+
+
+      <input type="submit" class="btn btn-primary" />
+    </form>
   </article>
 </body>
 
