--- a/proyecto html/tiendas.html
+++ b/proyecto html/tiendas.html
@@ -20,24 +20,66 @@
 
         <nav class="categoriasTienda">
 
-            <h2> Moda</h2>
-            <a href="moda.html"><img src="Imagenes/Kendall" alt=""></a>
+        <h2>FOOT LOCKER</h2>
+        <a href="https://www.footlocker.es/"><img src="Imagenes/footLocker" alt=""></a>
+        <p> <b>Foot Locker</b> es una tienda líder en calzado deportivo y ropa urbana, conocida por su amplia selección
+            de sneakers
+            y productos de marcas icónicas. Ideal para los amantes de la moda deportiva, ofrece las últimas tendencias
+            en
+            calzado y ropa casual.
 
-            <h2> Deporte</h2>
-            <a href="deporte.html"><img src="Imagenes/Jordan.jpg" alt=""></a>
+        </p>
 
-            <h2> Belleza y salud</h2>
-            <a href="BellezaSalud.html"><img src="Imagenes/Selena" alt=""></a>
+        <h2>ZARA</h2>
+        <a href="https://www.zara.com/es/"><img src="Imagenes/zara.jpg" alt=""></a>
 
-            <h2> Joyería</h2>
-            <a href="joyeria.html"><img src="Imagenes/joyas.jpg" alt=""></a>
+        <p> <b>Zara</b> es una de las marcas de moda más reconocidas a nivel mundial, conocida por sus colecciones
+            modernas,
+            elegantes y accesibles. Ofrece ropa, calzado y accesorios para mujer, hombre y niños, con diseños que siguen
+            las
+            últimas tendencias.</p>
 
-            <h2> Tecnología</h2>
-            <a href="tecnologia.html"><img src="Imagenes/tecnologias" alt=""></a>
+        <h2>H&M</h2>
+
+        <a href="https://www2.hm.com/es_es/index.html?srsltid=AfmBOooRffEuUTJKGgjJKag1PYCDZeYBghO-WGl5HvdMkJg7ibtyKCz8"><img
+                src="Imagenes/H&M.jpg" alt=""></a>
+
+        <p> <b>H&M</b> es una marca de moda internacional que combina estilo, calidad y precios accesibles. Ofrece ropa,
+            calzado y
+            accesorios para todas las edades, con colecciones que van desde lo básico hasta lo más trendy de cada
+            temporada.
+        </p>
+
+        <h2>PULL&BEAR</h2>
+        <a href="https://www.pullandbear.com/es/hombre-n6228"><img src="Imagenes/pull&bear" alt=""></a>
+        <p> <b>Pull&Bear</b> es una marca de moda juvenil que combina comodidad, estilo casual y las últimas tendencias
+            urbanas.
+            Ofrece ropa, calzado y accesorios para quienes buscan un look desenfadado y actual.</p>
+
+        <h2>ADIDAS</h2>
+        <a href="https://www.adidas.es/"><img src="Imagenes/adidas" alt=""></a>
+        <p> <b>Adidas</b> es una marca líder en ropa deportiva y calzado, conocida por su innovación, confort y estilo.
+            Ofrece
+            productos para atletas y aficionados al deporte, con diseños que combinan funcionalidad y moda, tanto para
+            entrenamientos como para el día a día.</p>
+
+        <h2>FNAC</h2>
+        <a
+            href="https://www.fnac.es/?origin=SEA_GOOG_SEA_BRAND&gad_source=1&gbraid=0AAAAAD8T49WYw8gxSzObFklNeWfKvLiQi&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHIGA9N6-1jR5hlPii0xIpi1kg6wV_Z429t5uf92hBfUUE4uo1rCkkaAg-LEALw_wcB&gclsrc=aw.ds"><img
+                src="Imagenes/fnac" alt=""></a>
+        <p> <b>FNAC</b> es una tienda especializada en tecnología, electrónica, cultura y entretenimiento. Ofrece una
+            gran variedad
+            de productos, como libros, música, cine, gadgets y artículos electrónicos, siendo el destino perfecto para
+            los
+            amantes de la tecnología y la cultura.
+
+        </p>
 
 
 
-        </nav>
+
+
+    </nav>
 
     </article>
 
