--- a/proyecto html/tiendas.html
+++ b/proyecto html/tiendas.html
@@ -15,73 +15,266 @@
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
 
-    <article>
+
+    <article class="container">
         <h1>TIENDAS</h1>
 
-        <nav class="categoriasTienda">
+        <!-- Button to Open the Modal -->
 
-        <h2>FOOT LOCKER</h2>
-        <a href="https://www.footlocker.es/"><img src="Imagenes/footLocker" alt=""></a>
-        <p> <b>Foot Locker</b> es una tienda líder en calzado deportivo y ropa urbana, conocida por su amplia selección
-            de sneakers
-            y productos de marcas icónicas. Ideal para los amantes de la moda deportiva, ofrece las últimas tendencias
-            en
-            calzado y ropa casual.
+        <img src="Imagenes/zara.jpg" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda1">
 
-        </p>
+        <!-- The Modal -->
+        <div class="modal" id="tienda1">
+            <div class="modal-dialog modal-sm modal-dialog-centered">
+                <div class="modal-content">
 
-        <h2>ZARA</h2>
-        <a href="https://www.zara.com/es/"><img src="Imagenes/zara.jpg" alt=""></a>
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Zara</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
 
-        <p> <b>Zara</b> es una de las marcas de moda más reconocidas a nivel mundial, conocida por sus colecciones
-            modernas,
-            elegantes y accesibles. Ofrece ropa, calzado y accesorios para mujer, hombre y niños, con diseños que siguen
-            las
-            últimas tendencias.</p>
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p> <b>Zara</b> es una de las marcas de moda más reconocidas a nivel mundial, conocida por sus
+                            colecciones
+                            modernas,
+                            elegantes y accesibles. Ofrece ropa, calzado y accesorios para mujer, hombre y niños, con
+                            diseños que
+                            siguen
+                            las
+                            últimas tendencias.</p>
+                    </div>
 
-        <h2>H&M</h2>
-
-        <a href="https://www2.hm.com/es_es/index.html?srsltid=AfmBOooRffEuUTJKGgjJKag1PYCDZeYBghO-WGl5HvdMkJg7ibtyKCz8"><img
-                src="Imagenes/H&M.jpg" alt=""></a>
-
-        <p> <b>H&M</b> es una marca de moda internacional que combina estilo, calidad y precios accesibles. Ofrece ropa,
-            calzado y
-            accesorios para todas las edades, con colecciones que van desde lo básico hasta lo más trendy de cada
-            temporada.
-        </p>
-
-        <h2>PULL&BEAR</h2>
-        <a href="https://www.pullandbear.com/es/hombre-n6228"><img src="Imagenes/pull&bear" alt=""></a>
-        <p> <b>Pull&Bear</b> es una marca de moda juvenil que combina comodidad, estilo casual y las últimas tendencias
-            urbanas.
-            Ofrece ropa, calzado y accesorios para quienes buscan un look desenfadado y actual.</p>
-
-        <h2>ADIDAS</h2>
-        <a href="https://www.adidas.es/"><img src="Imagenes/adidas" alt=""></a>
-        <p> <b>Adidas</b> es una marca líder en ropa deportiva y calzado, conocida por su innovación, confort y estilo.
-            Ofrece
-            productos para atletas y aficionados al deporte, con diseños que combinan funcionalidad y moda, tanto para
-            entrenamientos como para el día a día.</p>
-
-        <h2>FNAC</h2>
-        <a
-            href="https://www.fnac.es/?origin=SEA_GOOG_SEA_BRAND&gad_source=1&gbraid=0AAAAAD8T49WYw8gxSzObFklNeWfKvLiQi&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHIGA9N6-1jR5hlPii0xIpi1kg6wV_Z429t5uf92hBfUUE4uo1rCkkaAg-LEALw_wcB&gclsrc=aw.ds"><img
-                src="Imagenes/fnac" alt=""></a>
-        <p> <b>FNAC</b> es una tienda especializada en tecnología, electrónica, cultura y entretenimiento. Ofrece una
-            gran variedad
-            de productos, como libros, música, cine, gadgets y artículos electrónicos, siendo el destino perfecto para
-            los
-            amantes de la tecnología y la cultura.
-
-        </p>
+                    <!-- Modal footer -->
+                     <div class="modal-footer">
+                        <button>
+                            <a href="https://www.zara.com/es/">Visítanos</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
+        <!-- Button to Open the Modal -->
+
+        <img src="Imagenes/H&M.jpg" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda2">
+
+        <!-- The Modal -->
+        <div class="modal" id="tienda2">
+            <div class="modal-dialog modal-sm modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">H&M</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="" alt="">
+                        <p> <b>H&M</b> es una marca de moda internacional que combina estilo, calidad y precios
+                            accesibles. Ofrece
+                            ropa,
+                            calzado y
+                            accesorios para todas las edades, con colecciones que van desde lo básico hasta lo más
+                            trendy de cada
+                            temporada.
+                        </p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www2.hm.com/es_es/index.html?srsltid=AfmBOooRffEuUTJKGgjJKag1PYCDZeYBghO-WGl5HvdMkJg7ibtyKCz8">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
 
-    </nav>
+        <!-- Button to Open the Modal -->
+
+        <img src="Imagenes/pull&bear" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda3">
+
+        <!-- The Modal -->
+        <div class="modal" id="tienda3">
+            <div class="modal-dialog modal-sm modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">PULL&BEAR</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p> <b>Pull&Bear</b> es una marca de moda juvenil que combina comodidad, estilo casual y las
+                            últimas
+                            tendencias
+                            urbanas.
+                            Ofrece ropa, calzado y accesorios para quienes buscan un look desenfadado y actual.</p>
+
+                    </div>
+
+                    <!-- Modal footer -->
+                     <div class="modal-footer">
+                        <button>
+                            <a href="https://www.pullandbear.com/es/hombre-n6228">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Button to Open the Modal -->
+
+        <img src="Imagenes/footLocker" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda4">
+
+        <!-- The Modal -->
+        <div class="modal" id="tienda4">
+            <div class="modal-dialog modal-sm modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">FOOT LOCKER</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p> <b>Foot Locker</b> es una tienda líder en calzado deportivo y ropa urbana, conocida por su
+                            amplia
+                            selección
+                            de sneakers
+                            y productos de marcas icónicas. Ideal para los amantes de la moda deportiva, ofrece las
+                            últimas
+                            tendencias
+                            en
+                            calzado y ropa casual.
+
+                        </p>
+                    </div>
+
+                    <!-- Modal footer -->
+                   <div class="modal-footer">
+                        <button>
+                            <a href="https://www.footlocker.es/">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Button to Open the Modal -->
+
+        <img src="Imagenes/adidas" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda5">
+
+        <!-- The Modal -->
+        <div class="modal" id="tienda5">
+            <div class="modal-dialog modal-sm modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">ADIDAS</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p> <b>Adidas</b> es una marca líder en ropa deportiva y calzado, conocida por su innovación,
+                            confort y
+                            estilo.
+                            Ofrece
+                            productos para atletas y aficionados al deporte, con diseños que combinan funcionalidad y
+                            moda, tanto
+                            para
+                            entrenamientos como para el día a día.</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.adidas.es/">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Button to Open the Modal -->
+
+        <img src="Imagenes/fnac" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda6">
+
+        <!-- The Modal -->
+        <div class="modal" id="tienda6">
+            <div class="modal-dialog modal-sm modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Fnac</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p> <b>FNAC</b> es una tienda especializada en tecnología, electrónica, cultura y
+                            entretenimiento. Ofrece
+                            una
+                            gran variedad
+                            de productos, como libros, música, cine, gadgets y artículos electrónicos, siendo el destino
+                            perfecto
+                            para
+                            los
+                            amantes de la tecnología y la cultura.
+
+                        </p>
+                    </div>
+
+                    <!-- Modal footer -->
+                     <div class="modal-footer">
+                        <button>
+                            <a href="https://www.fnac.es/?origin=SEA_GOOG_SEA_BRAND&gad_source=1&gbraid=0AAAAAD8T49WYw8gxSzObFklNeWfKvLiQi&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHIGA9N6-1jR5hlPii0xIpi1kg6wV_Z429t5uf92hBfUUE4uo1rCkkaAg-LEALw_wcB&gclsrc=aw.ds">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
 
     </article>
+
+
+
+
+
+
+
+
+
+   
 
 </body>
 
