--- a/proyecto html/aviso_legal.html
+++ b/proyecto html/aviso_legal.html
@@ -19,11 +19,11 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        <h1>AVISO LEGAL</h1>
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <h2>AVISO LEGAL</h2>
                     </button>
                 </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                <div id="flush-collapseOne" class="accordion-collapse collapse"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <p>Las presentes Condiciones Generales de Uso regulan el uso del sitio web www.plazanorte2.com
@@ -137,11 +137,11 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                         <h2>DERECHOS DE PROPIEDAD INTELECTUAL E INDUSTRIAL</h2>
                     </button>
                 </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                <div id="flush-collapseTwo" class="accordion-collapse collapse"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <p>El Sitio Web, sus contenidos y derechos de Propiedad Intelectual, la programación y el diseño
@@ -186,7 +186,7 @@
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        <h2>Links:</h2>
+                        <h2>LINKS</h2>
                     </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse"
@@ -235,11 +235,11 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        <h2>Exención de responsabilidad:</h2>
+                        data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        <h2>EXENCIÓN DE RESPONSABILIDAD</h2>
                     </button>
                 </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                <div id="flush-collapseFour" class="accordion-collapse collapse"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <p>En ningún caso el Centro Comercial Plaza Norte 2 será responsable de la producción de
@@ -355,11 +355,11 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        <h2>Ley aplicable y Jurisdicción:</h2>
+                        data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                        <h2>LEY APLICABLE Y JURISDICCIÓN</h2>
                     </button>
                 </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                <div id="flush-collapseFive" class="accordion-collapse collapse"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <p>Las presentes condiciones generales se rigen por la legislación española. Para conocer de
