--- a/proyecto html/aviso_legal.html
+++ b/proyecto html/aviso_legal.html
@@ -8,6 +8,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Aviso legal</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
+    
+    <style>
+        h2 {
+            justify-self: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,7 +22,7 @@
     </header>
     <article>
         <section class="acordeon-item">
-            <div class="accordion-item">
+            <div class="accordion-item text-center">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -134,7 +140,7 @@
         </section>
 
         <section class="acordeon-item">
-            <div class="accordion-item">
+            <div class="accordion-item text-center">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
@@ -182,7 +188,7 @@
         </section>
 
         <section class="acordeon-item">
-            <div class="accordion-item">
+            <div class="accordion-item text-center">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
@@ -232,7 +238,7 @@
         </section>
 
         <section class="acordeon-item">
-            <div class="accordion-item">
+            <div class="accordion-item text-center">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
@@ -352,8 +358,8 @@
 
 
         <section class="acordeon-item">
-            <div class="accordion-item">
-                <h2 class="accordion-header">
+            <div class="accordion-item text-center">
+                <h2 class="accordion-header text">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                         <h2>LEY APLICABLE Y JURISDICCIÓN</h2>
