--- a/proyecto html/restaurantes.html
+++ b/proyecto html/restaurantes.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
 
