--- a/proyecto html/aviso_legal.html
+++ b/proyecto html/aviso_legal.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
     <article>
