--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <header>
+    <header class="text-center">
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
 
